# beacon-trading

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.mcp  fly.mcp.toml  fly.toml  start.sh
.claude/: settings.json
mcp_server/: CLAUDE.md  PLAN.md  pyproject.toml
mcp_server/.claude/: settings.json
mcp_server/src/beacon_trading_mcp/: __init__.py  config.py  models.py  server.py
mcp_server/src/beacon_trading_mcp/client/: __init__.py  base.py  fake.py  http.py
mcp_server/src/beacon_trading_mcp/tools/: __init__.py  market_data.py  orders.py  portfolio.py  watchlist.py
mcp_server/tests/: conftest.py  test_http_integration.py  test_market_data.py  test_orders.py  test_portfolio.py  test_server.py  test_watchlist.py
trading_app/: .dockerignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  fly.toml  requirements.txt  run.sh
trading_app/.claude/: launch.json
trading_app/app/: api.py  main.py  models.py  prices.py  symbols.py  trading.py
trading_app/app/storage/: base.py  file_store.py
trading_app/docs/: api.md  openapi.json
trading_app/scripts/: dump_openapi.py
trading_app/static/css/: app.css  theme.css
trading_app/static/js/: api.js  balances.js  browse.js  chat.js  history.js  orderpanel.js  orders.js  positions.js  stock.js  theme.js
trading_app/templates/: agentic.html  balances.html  base.html  browse.html  history.html  orders.html  positions.html  stock.html
