[project]
name = "beacon-trading-mcp-server"
version = "0.1.0"
description = "MCP server exposing the Beacon Trading API as MCP tools"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.scripts]
beacon-trading-mcp-server = "beacon_trading_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beacon_trading_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
